# tablr

./: cargo.toml  readme.md
tablr_druid/: Cargo.toml
tablr_druid/src/: main.rs
tablr_lib/: Cargo.toml
tablr_lib/src/: calc.rs  func.rs  io.rs  lib.rs  parse.rs  types.rs
tablr_term/: Cargo.toml  readme.md
tablr_term/src/: command.rs  main.rs
