[package]
name = "tablr_druid"
version = "0.1.0"
authors = ["JP Moresmau <jp@moresmau.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tablr_lib = {path="../tablr_lib"}
druid = { git = "https://github.com/linebender/druid.git" }