[package]
name = "tablr_lib"
version = "0.1.0"
authors = ["JP Moresmau <jp@moresmau.fr>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "6"
csv = "1.1"
thiserror = "1.0.21"
chrono = { version ="0.4", features = ["serde"] }
rhai = {version = "0.19.5", path="../../rhai", features=["internals"]}